// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StatusChip matches snapshot for each status: completed 1`] = `
<div>
  <div
    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorSuccess css-106f2r9-MuiChip-root"
  >
    <span
      class="MuiChip-label css-eccknh-MuiChip-label"
    >
      Completed
    </span>
  </div>
</div>
`;

exports[`StatusChip matches snapshot for each status: in_progress 1`] = `
<div>
  <div
    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorWarning css-cs74ct-MuiChip-root"
  >
    <span
      class="MuiChip-label css-eccknh-MuiChip-label"
    >
      In progress
    </span>
  </div>
</div>
`;

exports[`StatusChip matches snapshot for each status: new 1`] = `
<div>
  <div
    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorInfo css-1sz0aa9-MuiChip-root"
  >
    <span
      class="MuiChip-label css-eccknh-MuiChip-label"
    >
      New
    </span>
  </div>
</div>
`;
